--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,8 @@
+.images {
+	position: relative;
+	width: 100%;
+	height: 100%;
+} 
 .img {
 	opacity: 0;
 	position: absolute;
@@ -5,17 +10,49 @@
 	bottom: 0;
 	right: 0;
 	left: 0;
-	background-size: cover;
-	background-position: center center;
+/*	background-size: cover;
+	background-position: center center;*/
 	transition: .3s ease-in;
 }
 
-.img1 {background-image: url(../img/img1.jpg)}
-.img2 {background-image: url(../img/img2.jpg)}
-.img3 {background-image: url(../img/img3.jpg)}
-.img4 {background-image: url(../img/img4.jpg)}
-.img5 {background-image: url(../img/img5.jpg)}
-.img6 {background-image: url(../img/img6.jpg)}
-.img7 {background-image: url(../img/img7.jpg)}
-.img8 {background-image: url(../img/img8.jpg)}
+.img8 {
+	opacity: 1;
+	z-index: -1;
+	position: absolute;
+}
 
+.textBlock {
+	width: 100%;
+	text-align: center;
+	color: #fff;
+	position: absolute;
+	bottom: 10px;
+	font-family: Arial;
+}
+
+.ourAddress {
+	padding-bottom: 10px;
+}
+
+.ourAddress,
+.address h1 {
+	color: #D9107A;
+	margin: 0;
+}
+
+.address h2 {
+	margin: 5px 0;
+}
+
+.address {
+	margin: 0 auto;
+	width: 80%;
+	border-top: dotted 2px #D9107A;
+}
+
+.ourAddress,
+.address1,
+.address2,
+.address3 {
+	opacity: 0;
+}
