--- a/styles/style.css
+++ b/styles/style.css
@@ -1,27 +1,191 @@
+body {
+	font-family: Georgia;
+}
+
 .images {
 	position: relative;
 	width: 100%;
 	height: 100%;
+	max-width: 500px;
+	margin: auto;
 } 
 .img {
+	max-width: 500px;
 	opacity: 0;
 	position: absolute;
 	top: 0;
 	bottom: 0;
 	right: 0;
 	left: 0;
-/*	background-size: cover;
-	background-position: center center;*/
+	background-size: cover;
+	background-position: center center;
 	transition: .3s ease-in;
+	text-transform: uppercase;
 }
 
-.img8 {
-	opacity: 1;
-	z-index: -1;
+/*FirstBlock*/
+
+.img1 {
+	color: #fff;
+	text-align: center;
+	background-image: url(../img/img1.png);
+}
+
+.img1 h1{
+	font-size: 1.5em;
+	font-weight: normal;
+}
+
+.img1_top {
+	opacity: 0;
+	margin-top: 15px;
+}
+
+.img1_top img{
+	width: 70%;
+}
+
+.img1_top h1{
+	margin: 5px 0;
+}
+
+.img1_bottom {
+	opacity: 0;
 	position: absolute;
+	bottom: 10px;
+	padding: 0 7px;
+	box-sizing: border-box;
 }
 
-.textBlock {
+.pink {
+	color: #D9107A;
+}
+
+h1.pink {
+	font-weight: bold;
+}
+
+/*SecondBlock*/
+
+.img2 {
+	padding: 10px;
+	box-sizing: border-box;
+	color: #fff;
+	text-transform: uppercase;
+	background-image: url(../img/img2.png);
+}
+
+.img2 h1 {
+	font-size: 1.5em
+	font-weight: normal;
+}
+
+.img2 img {
+	width: 60%;
+}
+
+.img2_top {
+	opacity: 0;
+	text-align: right;
+}
+
+.img2_top h1{
+	margin: 5px 0;
+}
+
+.img2_bottom {
+	opacity: 0;
+	position: absolute;
+	bottom: 10px;
+}
+
+.img2_bottom {
+	margin-left: -10px;
+}
+
+.img2_text1 {
+	margin: 0;
+	padding: 5px 0;
+	background-color: #D9107A;
+}
+
+.img2_text2 {
+	margin: 0;
+	padding: 5px 0;
+	background-color: #D9107A;
+	width: 150px;
+	padding: 0;
+}
+
+/*ThirdBLock*/
+.img3 {
+	padding: 10px;
+	box-sizing: border-box;
+	color: #fff;
+	text-transform: uppercase;
+	background-image: url(../img/img3.png);
+	background-position: top center;
+}
+
+.img3 img {
+	width: 60%;
+}
+
+.img3_top h2 {
+	font-weight: normal;
+	margin-top: 30px;
+}
+
+.img3_bottom {
+	text-align: right;
+	position: absolute;
+	bottom: 20px;
+	right: 0;
+}
+
+.img3_text1 {
+	margin: 0;
+	padding: 5px 0;
+	background-color: #D9107A;
+	display: inline-block
+}
+
+.img3_text2 {
+	margin: 0;
+	padding: 5px 0;
+	background-color: #D9107A;
+	display: inline-block;
+	width: 150px;
+	padding: 0;
+}
+/*//////////////////////*/
+
+.img4 {background-image: url(../img/img4.jpg)}
+.img5 {background-image: url(../img/img5.jpg)}
+.img6 {background-image: url(../img/img6.jpg)}
+.img7 {background-image: url(../img/img7.png)}
+.img8 {background-image: url(../img/img8.jpg)}
+
+/*EighthBlock*/
+
+.img7_top {
+	padding: 10px;
+	box-sizing: border-box;
+	text-align: center;
+	color: #fff;
+	opacity: 0;
+}
+
+.img7_top img{
+	width: 60%;
+}
+
+.img7_top h2{
+	font-weight: normal;
+	font-size: 1.3em;
+}
+
+.img7_bottom {
 	width: 100%;
 	text-align: center;
 	color: #fff;
@@ -38,6 +202,7 @@
 	color: #D9107A;
 	margin: 0;
 	font-weight: normal;
+	font-size: 1.5em;
 }
 
 .address h2 {
