--- a/styles/style.css
+++ b/styles/style.css
@@ -50,6 +50,7 @@ body {
 }
 
 .img1_bottom {
+	width: 100%;
 	opacity: 0;
 	position: absolute;
 	bottom: 10px;
@@ -107,12 +108,14 @@ h1.pink {
 	margin: 0;
 	padding: 5px 0;
 	background-color: #D9107A;
+	margin-right: 30px;
 }
 
 .img2_text2 {
 	margin: 0;
 	padding: 5px 0;
 	background-color: #D9107A;
+	margin-right: 30px;
 	width: 150px;
 	padding: 0;
 }
@@ -145,6 +148,7 @@ h1.pink {
 
 .img3_text1 {
 	margin: 0;
+	margin-left: 30px;
 	padding: 5px 0;
 	background-color: #D9107A;
 	display: inline-block
@@ -152,6 +156,7 @@ h1.pink {
 
 .img3_text2 {
 	margin: 0;
+	margin-left: 30px;
 	padding: 5px 0;
 	background-color: #D9107A;
 	display: inline-block;
@@ -164,9 +169,15 @@ h1.pink {
 .img5 {background-image: url(../img/img5.jpg)}
 .img6 {background-image: url(../img/img6.jpg)}
 .img7 {background-image: url(../img/img7.png)}
-.img8 {background-image: url(../img/img8.jpg)}
 
 /*EighthBlock*/
+
+.img7_wrap {
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
 
 .img7_top {
 	padding: 10px;
@@ -189,8 +200,6 @@ h1.pink {
 	width: 100%;
 	text-align: center;
 	color: #fff;
-	position: absolute;
-	bottom: 10px;
 }
 
 .ourAddress {
