--- a/main.css
+++ b/main.css
@@ -110,3 +110,8 @@
 	background-image: url(fractalsImg.png);
 	margin: 0 auto;
 }
+
+.project_card_img-5 {
+	background-image: url(lissajous.png);
+	margin: 0 auto;
+}
